@@ -168,7 +168,6 @@ except ImportError:
     print >>sys.stderr, 'No local settings. Trying to start, but if ' + \
         'stuff blows up, try copying localsettings-sample.py to ' + \
         'localsettings.py and setting appropriately for your environment.'
-    pass
 
 try:
     # NOTE: errors if DATABASES is not configured (in some cases),
@@ -186,3 +185,32 @@ except ImportError:
     pass
 
 
+# enable django-debug-toolbar when available & in debug/dev modes
+if DEBUG or DEV_ENV:
+    try:
+        import debug_toolbar
+        # import to ensure debug panel is available before configuring
+        # (not yet in released version of eulfedora)
+        # from eulfedora import debug_panel
+        INSTALLED_APPS.append('debug_toolbar')
+    except ImportError:
+        pass
+
+# configure: default toolbars + existdb query panel
+DEBUG_TOOLBAR_PANELS = [
+    'debug_toolbar.panels.versions.VersionsPanel',
+    'debug_toolbar.panels.timer.TimerPanel',
+    'debug_toolbar.panels.settings.SettingsPanel',
+    'debug_toolbar.panels.headers.HeadersPanel',
+    'debug_toolbar.panels.request.RequestPanel',
+    'eulexistdb.debug_panel.ExistDBPanel',
+    'eulfedora.debug_panel.FedoraPanel',
+    'debug_toolbar.panels.sql.SQLPanel',
+    'debug_toolbar.panels.staticfiles.StaticFilesPanel',
+    'debug_toolbar.panels.templates.TemplatesPanel',
+    'debug_toolbar.panels.cache.CachePanel',
+    'debug_toolbar.panels.signals.SignalsPanel',
+    'debug_toolbar.panels.logging.LoggingPanel',
+    'debug_toolbar.panels.redirects.RedirectsPanel',
+    # 'debug_toolbar.panels.profiling.ProfilingPanel',
+]
